# Hello-Django-Ninja

./: .env.dev  .env.example  .flake8  .gitignore  Dockerfile  README.md  __init__.py  dev_tools.py  docker-compose.override.yml.example  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.qoder/quests/: api-layer-refactoring.md  test-directory-synchronization.md
.qoder/rules/: git_remote_rule.md  project_rule.md
app/api/: apps.py  authentication.py  permissions.py  schemas.py
app/api/controllers/: __init__.py  auth.py  departments.py  health.py  login_logs.py  menu_metas.py  menus.py  operation_logs.py  permissions.py  roles.py  system_configs.py  users.py
app/application/services/: __init__.py  department_service.py  login_log_service.py  menu_meta_service.py  menu_service.py  operation_log_service.py  permission_service.py  role_service.py  system_config_service.py  user_service.py
app/common/: api_response.py  exceptions.py  middlewares.py  test_runner.py  utils.py
app/common/exception/: exception_handler.py  exceptions.py
app/common/middleware/: operation_log_middleware.py
app/domain/: apps.py  factories.py
app/domain/migrations/: 0001_initial.py  0002_auto_20251015_2328.py  (+5 more)
application/: dtos.py
application/services/: permission_service.py  role_service.py  user_service.py
common/: utils.py
data/: README.md
deploy/: .env.prod.example  README.md  docker-compose.yml  nginx.conf
docs/: README.md  configuration.md  docker_deployment.md  health_api.md  logging.md  operation_log_middleware.md  uv_usage.md
domain/: factories.py
domain/migrations/: 0001_initial.py
domain/models/: permission.py  user.py
domain/repositories/: role_repository.py  user_repository.py
domain/services/: rbac_service.py
interfaces/api/: __init__.py  apps.py  authentication.py  permissions.py  urls.py
logs/: README.md
service/: config.py  logging_config.py  ninja_extra_api.py  settings.py  urls.py
sql/: README.md  rbac.sql
tests/: pytest.ini  run_tests.py  test_api_auth.py  test_user_model.py
tests/test_api/: test_authentication.py  test_permissions.py
tests/test_application/: test_dtos.py
tests/test_common/: test_api_response.py  test_exception_handler.py  test_exceptions.py  test_middlewares.py  test_utils.py
(+87 files in other folders)
